# coffee-roasting

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze.py  coffee_lookup.py  hottop_reference.py  llm_recommender.py  pyproject.toml  roast_analysis.py  roast_display.py  roast_metrics.py  roast_narrative.py  roast_parser.py  sentinel_loader.py  targets.json
log-sync/: artisan-sync-watch.sh  artisan-sync.conf.example  artisan-sync.service  artisan-sync.sh
roast-logs/: 1_Ethiopia Gerba Hechere_2026-02-06.alog  3_Ethiopia Gerba Hechere_2026-02-21.alog  4_Ethiopia Gerba Hechere_2026-02-21.alog
tests/: test_analysis_and_cli.py  test_roast_metrics.py
